--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@
 # Created by https://www.gitignore.io/api/vim,osx,node,windows
 # Edit at https://www.gitignore.io/?templates=vim,osx,node,windows
 
+##windows virtual environment##
+**venv
+
+
 ### Node ###
 # Logs
 logs
