--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@
 **Booking database inserts.sql
 **booking_structure.sql
 **new_booking_inserts.sql
-
+###my personal notes###
+**notes.txt
 ##windows virtual environment##
 **venv
 
