updated gt ignpre

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@
 ##db stuff##
 **Booking database inserts.sql
 
+##graphs##
+**spendings.png
+**revenue.png
+**commissions.png
 
 ###my personal notes###
 **notes.txt
